# quantumvtl

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PLAN-LTO-COMPLIANCE.md  PLAN-SMC-COMPLIANCE.md  README.md  call-claude  run.sh
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
crates/iscsi-target/: Cargo.toml
crates/iscsi-target/src/: cdb_decode.rs  lib.rs  login.rs  pdu.rs  scsi_log.rs  session.rs  simulation_clock.rs  target.rs
crates/iscsi-target/src/cdb_decode/: cdb_common.rs  cdb_smc.rs  cdb_ssc.rs  mod.rs  names.rs  sense.rs
crates/iscsi-target/src/cdb_decode/response/: element_status.rs  inquiry.rs  log_pages.rs  log_sense.rs  mod.rs  mode_pages.rs  mode_sense.rs  read_block_limits.rs  read_position.rs  report_density.rs  report_luns.rs
crates/smc/: Cargo.toml
crates/vtld/: Cargo.toml  build.rs
crates/vtld/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/vtld/frontend/src/: App.vue  api.ts  router.ts  types.ts  vite-env.d.ts
crates/vtld/frontend/src/components/: DataFieldTree.vue  ScsiLogLine.vue
crates/vtld/frontend/src/composables/: useWebSocket.ts
crates/vtld/frontend/src/views/: ApiDocs.vue  CommandDetail.vue  ConfigView.vue  Dashboard.vue  DashboardView.vue  DeviceDetail.vue  DevicesView.vue  DocsView.vue  DriveDetail.vue  InitiatorsView.vue  Login.vue  MediaDetail.vue  MediaView.vue  SessionCommandDetail.vue  SmcView.vue  SscView.vue
crates/vtld/src/: admin.rs  config.rs  error.rs  lib.rs  main.rs  store.rs
examples/: config.yaml
scripts/: setup_quantumvtl.sh
(+223 files in other folders)
