[package]
name = "iscsi-target"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "sync"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
utoipa = { version = "5", optional = true }

[dev-dependencies]
serde_json = "1"
