[package]
name = "vtld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vtld"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
jsonwebtoken = "9"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
iscsi-target = { path = "../iscsi-target", features = ["utoipa"] }
smc = { path = "../smc" }
ssc = { path = "../ssc" }
